--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
+    "jwt-simple": "^0.5.6",
+    "moment": "^2.30.1",
     "mongoose": "^9.2.1",
     "validator": "^13.15.26"
   },
