--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,6 +5,19 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Las peticiones que empiezan por /api se envían al backend
+    location /api/ {
+        proxy_pass http://server_fichame:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Upgrade $http_upgrade;
+    }
+
+    # Remove unrecognized features from Permissions-Policy header
+    add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
+
     # Para cualquier ruta que no sea un archivo/carpeta, sirve index.html
     location / {
         try_files $uri $uri/ /index.html;
